fix overflow on view-compact

--- a/assets/scss/wowchemy_proto/base.scss
+++ b/assets/scss/wowchemy_proto/base.scss
@@ -81,3 +81,12 @@ h1 {
   background: var(--bg-color);
   border: 1px solid rgba(255, 255, 255, 0.15);
 }
+
+.view-compact {
+  overflow: hidden;
+  &>.media-body {
+    flex-shrink: 1;
+    flex-grow: 1;
+    width: 0;
+  }
+}
